src/snapshots/fuzz_crash/fuzz_crash_008.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
||1
~~~PROBLEMS
Misplaced carriage return character

MISSING HEADER

The module header is missing.

||1
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected '|' in this expression.

||1
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

||1
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
OpBar(1:1-1:2),OpBar(1:3-1:4),Int(1:4-1:5),EndOfFile(1:5-1:5),
~~~PARSE
(file (1:1-1:5)
	(malformed_header (1:1-1:2) "missing_header")
	(statements (malformed_expr (1:5-1:5) "expected_expr_bar")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END